[package]
name = "kv-extsort"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/ciscorn/kv-extsort-rs"

[dependencies]
bytemuck = { version = "1.22", features = ["derive"] }
crossbeam-channel = "0.5"
log = "0.4"
rayon = "1.10"
tempfile = "3.18"
thiserror = "2.0"

[dev-dependencies]
env_logger = "0.11"
rand = { version = "0.8", features = ["small_rng"] }
num_cpus = "1"
rlimit = "0.10.1"
ext-sort = { version = "0.1.4", features = ["memory-limit"] }
serde = { version = "1.0.209", features = ["derive"] }
bincode = { version = "2.0.0", default-features = false, features = ["std", "serde"] }
serde_bytes = "0.11.14"
deepsize = "0.2.0"
ctrlc = "3.4.4"

[profile.release]
lto = "thin"
